# JSMin

./: .gitignore  COPYING  Makefile  Makefile.am  README  README.markdown  README.md  configure.ac  jsmin.c  libjsmin.pc.in
jsmin/: Makefile.am  jsmin.c  jsmin.h  libjsmin.c
m4/: cflags.m4
